Make dropdown in Subject row visible and start fixing tests

--- a/app/assets/stylesheets/content/_autocomplete.sass
+++ b/app/assets/stylesheets/content/_autocomplete.sass
@@ -141,6 +141,7 @@ mark.ui-autocomplete-match
 // -------------------------- ng-select --------------------------
 .ng-select
   width: 100%
+  font-size: 14px
 
   .ng-value-container
     width: calc(100% - 30px)
