--- a/app/assets/stylesheets/content/work_packages/new/_type_status_row.sass
+++ b/app/assets/stylesheets/content/work_packages/new/_type_status_row.sass
@@ -3,10 +3,6 @@
   display: flex
   font-size: 24px
 
-  // Set the correct height when editing these fields
-  .wp-inline-edit--field
-    height: 40px
-
   // Add some minor margin between active status and type field
   #wp-new-inline-edit--field-type,
   .work-packages--type-selector
